# Harmonia

./: README.md  docker-compose.yml
api-gw/: .air.toml  .dockerignore  Dockerfile.dev  build.sh  go.mod  go.sum  main.go
api-gw/cmd/api/: main.go
api-gw/docs/: docs.go  swagger.json  swagger.yaml
api-gw/internal/auth/: controller.go  middleware.go  migrate.go  session.go  session_memory.go  session_redis.go  user_repo.go
api-gw/internal/cache/: cache.go  memory.go  redis.go
api-gw/internal/config/: config.go
api-gw/internal/engine/: client.go  dto.go  handler.go  service.go
engine-cpp/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.dev  build.sh  main.cpp
engine-cpp/clients/: README.txt  hello_client.cpp  matmul_client.cpp  pi_client.cpp  stats_client.cpp
engine-cpp/gen-cpp/: EngineService.cpp  EngineService.h  EngineService_server.skeleton.cpp  engine_types.cpp  engine_types.h
engine-cpp/src/lib/: MatrixOps.cpp  MatrixOps.h  MonteCarlo.cpp  MonteCarlo.h  Stats.cpp  Stats.h
engine-cpp/src/server/: EngineServiceHandler.cpp  EngineServiceHandler.h  main.cpp
engine-cpp/thrift/: engine.thrift
frontend/: Dockerfile.dev  next.config.ts  package-lock.json  proxy.ts
frontend/components/: ApiEndpointCard.tsx  Header.tsx
frontend/contexts/: AuthContext.tsx
frontend/lib/: api.ts
frontend/pages/: api-demo.tsx  index.tsx  login.tsx  register.tsx
proto/: logic.proto
reco-py/: Dockerfile.dev  build.sh  client.py  generate.sh  logic_pb2.py  logic_pb2_grpc.py  main.py  requirements.txt
reco-py/clients/: README.txt  evaluate_client.py  hello_client.py  logic_pb2_grpc.py  plan_client.py  transform_client.py
reco-py/logic_service/: errors.py  evaluators.py  planners.py  service.py  transforms.py
reco-py/proto/: logic.proto
thrift/: engine.thrift
(+10 files in other folders)
